--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Lukenet Simulation",
   "dependencies": {
-    "async": "^2.6.1"
+    "async": "^2.6.1",
+    "js-sha256": "^0.9.0",
+    "truffle-contract": "^1.1.11",
+    "web3": "^0.18.2"
   }
 }
