--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "js-sha256": "^0.9.0",
+    "solidity-util": "github:willitscale/solidity-util",
     "truffle-contract": "^1.1.11",
     "web3": "^0.18.2"
   }
